--- a/www/templates/tab-confirmed.html
+++ b/www/templates/tab-confirmed.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div ng-repeat="movie in confirmed" class="list card">
       <div class="item item-thumbnail-left item-text-wrap">
-        <img src="{{ movie.CoverImage }}">
+        <img src="{{ movie.CoverImage }}" />
         <h2 ng-bind-html="movie.MovieTitle"></h2>
         <i class="ion ion-pricetags"> {{ movie.Genre }}</i>
         <i class="ion ion-thumbsup"> {{ movie.Votes }}</i>
