proper about tab

--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -2,18 +2,20 @@
   <ion-content>
     <div class="card">
       <div class="item item-divider">
-            About The Developer
+        Maverick 
       </div>
       <div class="item item-text-wrap">
-        Maverick
+        Cross-platform Mobile Developer
       </div>
       <div class="item item-text-wrap">
-          Cross-platform Mobile Developer
+        App Source Code: <a href="https://github.com/mavjs/BtrYTS">https://github.com/mavjs/BtrYTS</a>
+        <br />
+        License: MIT
       </div>
       <div class="item item-divider">
-          <i class="ion ion-social-twitter"> <a href="https://twitter.com/@mavjs">@mavjs</a></i>
-          <br />
-          <i class="ion ion-ios7-world"> <a href="https://mavjs.org">https://mavjs.org</a></i>
+        <i class="ion ion-social-twitter"> <a href="https://twitter.com/@mavjs">@mavjs</a></i>
+        <br />
+        <i class="ion ion-ios7-world"> <a href="https://mavjs.org">https://mavjs.org</a></i>
       </div>
     </div>
   </ion-content>
