allow fullscreen of youtube video

--- a/www/templates/tab-movie.html
+++ b/www/templates/tab-movie.html
@@ -31,7 +31,7 @@
 
       <div class="item item-image">
           <div class="video-container">
-              <iframe class='youtube-player' type='text/html' width='640' height='390' ng-src='{{yt()}}' frameborder='0'></iframe>
+              <iframe class='youtube-player' type='text/html' width='640' height='390' ng-src='{{yt()}}' frameborder='0' allowfullscreen></iframe>
           </div>
       </div>
 
