added a list of movies currently downloadable

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,6 +11,10 @@
     <ion-nav-view name="tab-upcoming"></ion-nav-view>
   </ion-tab>
   
+  <ion-tab title="Movies" icon="icon ion-social-youtube" href="#/tab/movies">
+    <ion-nav-view name="tab-movies"></ion-nav-view>
+  </ion-tab>
+
   <ion-tab title="Confirmed" icon="icon ion-checkmark-circled" href="#/tab/confirmed">
     <ion-nav-view name="tab-confirmed"></ion-nav-view>
   </ion-tab>
