forgot the last tag

--- a/www/templates/tab-movie.html
+++ b/www/templates/tab-movie.html
@@ -39,7 +39,7 @@
           <i class="ion ion-person-stalker">
           </i>
           <span ng-repeat="cast in movie.CastList">
-              {{ cast.ActorName }}<span ng-if="!$last">, 
+              {{ cast.ActorName }}<span ng-if="!$last">, </span>
           </span>
       </div>
       
